第一次修改

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <meta name="description" content="前端微专业是网易云课堂开设的网上学习课程，课程表中最后一颗是独立完成一个网站。"/>
 <meta name="viewport" content="width=device-width"/>
 <link rel="stylesheet" href="css/style0702.css"/>
+<link rel="stylesheet" href="css/screen.css"/>
 </head>
 <body>
 <div class="g-doc">
