修改一些小BUG

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     			<ul class="small-nav f-inline">
     				<li><a href="https://open.163.com/" target="blank">网易公开课</a></li>
     				<li><a href="https://study.163.com/" target="blank">云课堂</a></li>
-    				<li><a href="https://www/icourse163.org/" target="blank">中国大学MOOC</a></li>
+    				<li><a href="https://www.icourse163.org/" target="blank">中国大学MOOC</a></li>
     				<li ><span class="search f-inline"></span></li>
     			</ul>
     		</div>
@@ -103,10 +103,10 @@
 		<div class="m-gallery">
 			<ul class="u-gallery">
 				<li class="gallery1"><img src="images/photo1.jpg" alt="photo1"></li>
-				<li class="gallery1"><img src="images/photo2.jpg" alt="photo2"></li>
-				<li class="gallery1"><img src="images/photo3.jpg" alt="photo3"></li>
-				<li class="gallery1"><img src="images/photo4.jpg" alt="photo4"></li>
-				<li class="gallery1"><img src="images/photo5.jpg" alt="photo5"></li>
+				<li class="gallery2"><img src="images/photo2.jpg" alt="photo2"></li>
+				<li class="gallery3"><img src="images/photo3.jpg" alt="photo3"></li>
+				<li class="gallery4"><img src="images/photo4.jpg" alt="photo4"></li>
+				<li class="gallery5"><img src="images/photo5.jpg" alt="photo5"></li>
 			</ul>
 		</div>
     </div>
